brot2 (2.0~unreleased) UNRELEASED; urgency=medium

  * Tweak fractal/colour menu hotkeys

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 17 Jul 2016 16:31:11 +1200

brot2 (1.2) xenial; urgency=low

  * Add palettes from rjk's and fanf's mandelbrotters
  * Refactor fractal maths machinery to be traits-based, have it auto-select
  between the available types based on zoom depth, make float/double types
  selectable at configure time.
  * Add benchmarker (`make benchmark')
  * Update build machinery for automake 1.15 & gcc 5.3
  * Fix default save directory (LP#1600657)
  * Remember the last directory we saved in (LP#1600568)
  * Apply aspect ratio fix when saving PNG (LP#1600574)
  * Add --hud option to CLI and checkbox to GTK save dialog (LP#1603347)

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 17 Jul 2016 12:47:19 +1200

brot2 (1.1) precise; urgency=low

  * Fix automake machinery so that make dist works again. (Oops!)
  * LP#882411: Create unit test framework.
  * Major rewrite of the fractal plotting machinery, with reasonable unit
  test support (closes #882411).  'make check' added.  Updated CLI and gtkui
  to use new machinery.  Removed old Render and Plot2 as obsolete.
  * LP#1039385: Major HUD improvements: text reduced; font size is now
  variable (and a preference); can appear with an outline text effect;
  can show/hide 'Zoom:' legend; uses reasonable superscript notation.
  * LP#1033910: Report in the HUD when we're at the zoom limit, and don't
  bother to zoom further.
  * LP#1099061: Avoid creating/destroying one thread per plot.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Mon, 14 Jan 2013 22:14:49 +1300

brot2 (1.0) oneiric; urgency=low

  * Gamma release series.
  * LP#783040: Create preferences mechanism, make mouse button and scroll
  events configurable.
  * Fix HSV palette conversion to not worry about subnormals (and instead
  to worry about infinities).