@@ -1,6 +1,7 @@
 brot2 (2.0~unreleased) UNRELEASED; urgency=medium
 
   * Tweak fractal/colour menu hotkeys
+  * Improve controls window default position
 
  -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 17 Jul 2016 16:31:11 +1200
 
